wersja przed dodaniem security voters

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -12,6 +12,38 @@
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
     {% endblock %}
 </head>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url('post_index') }}" title="{{ 'action.homepage'|trans }}">{{ 'action.homepage'|trans }}</a>
+            </li>
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url('app_logout') }}">{{ 'action_logout'|trans }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url('user_edit', {id: app.user.id}) }}">{{ 'action_change_password'|trans }}</a>
+                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{{ url('user_editdata', {id: app.user.id}) }}">{{ 'action_change_data'|trans }}</a>#}
+{#                </li>#}
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">{{ app.user.email }}</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url('app_login') }}">{{ 'action_login'|trans }}</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
+
 <body>
     <div class="container-fluid">
         {% include 'default/_flash_messages.html.twig' %}
