--- a/app/templates/post/index.html.twig
+++ b/app/templates/post/index.html.twig
@@ -66,6 +66,11 @@
                 </a>
             </p>
         {% endif %}
+        <p>
+            <a href="{{ url('category_index') }}" title="{{ 'action.show_category_list'|trans }}">
+                {{ 'action.show_category_list'|trans }}
+            </a>
+        </p>
 
     {% else %}
         <p>
