--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -37,7 +37,7 @@
                 </li>
                 {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('user_index') }}">User Administration</a>
+                        <a class="nav-link" href="{{ url('user_index') }}">{{ 'action.user_administration'|trans }}</a>
                     </li>
                 {% endif %}
             {% else %}
